css/styles.css
*{
    margin: 0;
    color: #222222;
}

a {
  text-decoration: none;
}

.section h1 {
    font-family: 'Raleway', sans-serif;
}

.section p {
    font-family: 'Roboto', sans-serif;
}

.container {
    position: relative;
}

.background-row {
    position: absolute;
    z-index: 5;
}

.content-row {
    position: relative;
    z-index: 10;
}

.inline-header {
    display: inline-block;
}

.about-me {
    font-weight: 300;
    font-size: 25px;
}

.btn-outline-black {
    background-color: transparent;
    border: 1px solid #222222;
    padding-left: 10px;
    padding-right: 10px;
    color: #222222;
    font-size: 20px;
    font-family: 'Raleway', sans-serif;
    font-weight: 300;
    transition: all 300ms ease-in-out;
}

.btn-outline-black:hover {
    background-color: #222222;
    color: #ecf0f1;
}

#section1 {
    background: -moz-linear-gradient(335deg, rgba(220,223,245,1) 0%, rgba(236,240,241,1) 100%); /* ff3.6+ */
    background: -webkit-gradient(linear, left top, right bottom, color-stop(0%, rgba(220,223,245,1)), color-stop(100%, rgba(236,240,241,1))); /* safari4+,chrome */
    background: -webkit-linear-gradient(335deg, rgba(220,223,245,1) 0%, rgba(236,240,241,1) 100%); /* safari5.1+,chrome10+ */
    background: -o-linear-gradient(335deg, rgba(220,223,245,1) 0%, rgba(236,240,241,1) 100%); /* opera 11.10+ */
    background: -ms-linear-gradient(335deg, rgba(220,223,245,1) 0%, rgba(236,240,241,1) 100%); /* ie10+ */
    background: linear-gradient(115deg, rgba(220,223,245,1) 0%, rgba(236,240,241,1) 100%); /* w3c */
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#DCDFF5', endColorstr='#ecf0f1',GradientType=1 ); /* ie6-9 */
}

#section1-bg {
    margin-top: -10%;
    width: 89vw;
    display: inline-block;
    position: relative;
    padding-bottom: 50%;
    vertical-align: top;
}

#section1-bg svg, img, object {
    opacity: 0.15;
    right: 0;
    bottom: 0;
    display: block;
    position: absolute;
    height: 80%;
}

#section2 {
    background-color: #00796B;
}

#section2 h1 {
    color: #ecf0f1;
    font-size: 4.5em;
    padding-bottom: 2%;
}

.project-placeholder {
    position: relative;
    width: 320px;
    height: 200px;
    background-color: rgba(0,0,0,0.3);
    border-radius: 7px;
    margin-bottom: 5%;
}

